# agent-client-rs

./: AGENT.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: ai.rs  analyze.rs  auth.rs  backup.rs  blocks.rs  capabilities.rs  config.rs  error.rs  flows.rs  health.rs  http.rs  kinds.rs  lib.rs  lifecycle.rs  links.rs  nodes.rs  plugins.rs  preferences.rs  search.rs  seed.rs  slots.rs  types.rs  ui.rs  units.rs  users.rs
