[package]
name = "agent-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Reusable Rust HTTP client for the agent REST API"

[lints]
workspace = true

[dependencies]
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
schemars = { workspace = true }
futures-util = { workspace = true }
