[package]
name = "listo-agent-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
publish = true
description = "Reusable Rust HTTP client for the listo agent REST API"
repository = "https://github.com/listo-ai/agent-client-rs"

[lib]
name = "agent_client"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "warn"
panic = "warn"
todo = "warn"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
semver = { version = "1", features = ["serde"] }
schemars = { version = "0.8", features = ["derive"] }
futures-util = "0.3"
